# vidcompressorx

./: .gitignore  README.md  main.py  metrics.py  pyproject.toml  requirements.txt
experiments/: compute_metrics.py  create_mp4.py  metrics_utils.py  visualize_frames.py
scripts/: keyframes_dist.py  plot_compression.py  select_keyframes.py
video_compressor/: __init__.py  pipeline.py
video_compressor/utils/: progress.py
