[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidcompressorx"
version = "0.1.0"
description = "Video compression pipeline with metric-based keyframe selection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Satvik Virmani" }]
keywords = ["video", "compression", "keyframes", "computer-vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "tqdm",
    "lpips",
    "matplotlib",
    "scipy",
    "torch",
    "scikit-image",
]

[tool.setuptools]
packages = ["video_compressor", "video_compressor.utils"]